# TRIBE-

./: Antigravity IDE.lnk  App.js  Intel® Processor Identification Utility.lnk  Zoho Meeting.lnk
PORTFOLIO/: Education.html  Experiance.html  Projeccts.html  index.html
TRIBE MAIN/tribe-backend/: .env.example  .gitignore  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
TRIBE MAIN/tribe-backend/alembic/: env.py  script.py.mako
TRIBE MAIN/tribe-backend/app/: __init__.py  lifespan.py  main.py
TRIBE MAIN/tribe-backend/app/api/dependencies/: auth.py  roles.py
TRIBE MAIN/tribe-backend/app/api/v1/: auth.py  interests.py  profiles.py  users.py
TRIBE MAIN/tribe-backend/app/config/: constants.py  database.py  logging.py  security.py  settings.py
TRIBE MAIN/tribe-backend/app/core/: base_model.py  exceptions.py  responses.py
TRIBE MAIN/tribe-backend/app/models/: interest.py  permission.py  profile.py  role.py  session.py  user.py  user_interest.py
TRIBE MAIN/tribe-backend/app/repositories/: interest_repository.py  profile_repository.py  user_repository.py
TRIBE MAIN/tribe-backend/app/schemas/: auth.py  interest.py  profile.py  user.py
TRIBE MAIN/tribe-backend/app/services/: auth_service.py  interest_service.py  profile_service.py  user_service.py
TRIBE MAIN/tribe-backend/scripts/: startup.bat  startup.sh
TRIBE MAIN/tribe-backend/tests/: __init__.py  conftest.py  test_auth.py
YONEX -clone/: index.html  style.css
ZOMATO -clone/: index.html  text.css
components/: BottomNav.js  ClubCard.js
personal portfolio 1/: index.html  script.js  style.css
personal portfolio 2/: index.html  script.js  style.css
personal portfolio 3/: index .html
personal portfolio 4/: index.html  script.js  style.css
personal portfolio 5/: index.html  script.js  style.css
personal portfolio 6/: index.html  script.js  style.css
portfolio personal/: index.html  script.js  style.css
portfolio web 1/: index.html  script.js  style.css
portfolio web 2/: index.html  script.js  style.css
screens/: Discover.js
